--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,3 +1,8 @@
+github_users:
+  - BriVandrey
+  - HDClark94
+  - wulfdewolf
+
 github_repos:
   - MattNolanLab/grid_cell_analysis
   - MattNolanLab/SPAD_in_vivo
