corrected lastname sorry :(

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: The Nolan x Surmelli Lab # the website title (if blank, full name will be used instead)
+title: The Nolan x Sürmeli Lab # the website title (if blank, full name will be used instead)
 first_name: Nolan
 middle_name: and
-last_name: Surmelli
+last_name: Sürmeli
 email: you@example.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   The Nolan x Surmelli Lab website.
