--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ rss_icon: false
 
 navbar_fixed: true
 footer_fixed: false
+banner: false
 
 # Dimensions
 max_width: 800px
@@ -368,7 +369,7 @@ enable_darkmode: false # enables switching between light/dark modes
 enable_navbar_social: false # enables displaying social links in the navbar on the about page
 enable_project_categories: true # enables categorization of projects into multiple categories
 enable_medium_zoom: true # enables image zoom feature (as on medium.com)
-enable_progressbar: true # enables a horizontal progress bar linked to the vertical scroll position
+enable_progressbar: false # enables a horizontal progress bar linked to the vertical scroll position
 
 # -----------------------------------------------------------------------------
 # Library versions
