--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
   The Nolan x Surmelli Lab website.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🧠 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://MattNolanLab.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
@@ -44,7 +44,7 @@ rss_icon: false
 
 navbar_fixed: true
 footer_fixed: false
-banner: false
+banner: assets/img/banner.jpg # path to the banner image
 
 # Dimensions
 max_width: 800px
