--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,6 +1,8 @@
-"AJP":
-  url: https://aapt.scitation.org/journal/ajp
-  color: "#00369f"
+"NOLAN":
+  color: "#edffab"
 
-"PhysRev":
-  url: https://journals.aps.org/
+"SÜRMELI":
+  color: "#edffab"
+
+"NOLAN x SÜRMELI":
+  color: "#8783d1"
