smaller margins badges

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,8 +1,8 @@
 "NOLAN":
-  color: "#edffab"
+  color: "#d63230"
 
 "SÜRMELI":
-  color: "#edffab"
+  color: "#f39237"
 
 "NOLAN x SÜRMELI":
-  color: "#8783d1"
+  color: "#1c77c3"
