--- a/_config.yml
+++ b/_config.yml
@@ -119,8 +119,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Our Research Punchline # blog_name will be displayed in your blog page
+blog_description: trying to understand x
 permalink: /blog/:year/:title/
 
 # Pagination
@@ -271,8 +271,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code"] # these tags will be displayed on the front page of your blog
-display_categories: ["blockquotes"] # these categories will be displayed on the front page of your blog
+display_tags: ["electrophysiology", "imaging", "modelling", "machine learning", "spikesorting"] # these tags will be displayed on the front page of your blog
+display_categories: ["Nolan lab", "Sürmeli lab"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
