--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Our Research Punchline # blog_name will be displayed in your blog page
+blog_name: Our Research Punchline # blog_name will be displayed in your blog page (IF YOU HAVE ONE)
 blog_description: trying to understand x
 permalink: /blog/:year/:title/
 
