--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ rss_icon: false
 # Layout
 # -----------------------------------------------------------------------------
 
-navbar_fixed: true
+navbar_fixed: false
 footer_fixed: false
 banner: assets/img/banner.jpg # path to the banner image
 
