banner and spacing

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,10 +1,10 @@
 "NOLAN":
   color: "#d63230"
-  url: /nolan-group
+  url: /nolan-lab
 
 "SÜRMELI":
   color: "#f39237"
-  url: /surmeli-group
+  url: /surmeli-lab
 
 "NOLAN<br>x<br>SÜRMELI":
   color: "#1c77c3"
