--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ rss_icon: false
 navbar_fixed: false
 footer_fixed: false
 banner: assets/img/banner.png # path to the banner image
-banner_title_left: "Systems and Circuits lab"
-banner_title_right: "Nolan & Sürmeli groups"
+banner_title_left: "Nolan & Sürmeli labs"
+banner_title_right: ""
 
 # Dimensions
 max_width: 800px
