--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,6 @@ last_name: Sürmeli
 email: matt.nolan@ed.ac.uk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   The Nolan & Surmelli Lab website.
-footer_text: |
-    <a href="https://discovery-brain-sciences.ed.ac.uk/">
-      <img src="/assets/img/cdbs.png" style="min-width: 20%; max-width: 50%" alt="Centre for Discovery Brain Sciences logo">
-    </a>
-    <a href="https://sidb.org.uk/">
-      <img src="/assets/img/SIDB.gif" alt="Simons Initiative for the Developing Brain logo" style="min-width: 20%; max-width: 60%">
-    </a>
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🧠 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -52,11 +45,11 @@ rss_icon: false
 navbar_fixed: false
 footer_fixed: false
 banner: assets/img/banner.png # path to the banner image
-banner_title_left: "Nolan & Sürmeli labs"
+banner_title_left: "Nolan &<br>Sürmeli<br>labs"
 banner_title_right: ""
 
 # Dimensions
-max_width: 800px
+max_width: 1000px
 
 # TODO: add layout settings (single page vs. multi-page)
 
