--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ rss_icon: false
 
 navbar_fixed: false
 footer_fixed: false
-banner: assets/img/banner.png # path to the banner image
+banner: assets/img/banner.jpg # path to the banner image
 banner_title_left: "Nolan &<br>Sürmeli<br>labs"
 banner_title_right: ""
 
